PEL -- Pragmatic Emacs Library --  NEWS         -*- org -*-

* Changes since Version 0.4.1:
** Modifications, Fixes and Improvements:
- Add ~<f12><f1>~ key binding for *change-log-mode* to open the new [[https://raw.githubusercontent.com/pierre-rouleau/pel/master/doc/pdf/changelog][⅀Changelog]] PDF, activated when *pel-use-changelog-mode*
  user option is on.
- Add ~<f12><f1>~ key binding for *tup-mode* and *nix-mode* to open their respective PDF files:
   [[https://raw.githubusercontent.com/pierre-rouleau/pel/master/doc/pdf/pl-nix.pdf][𝕻𝔩 - Nix]] and [[https://raw.githubusercontent.com/pierre-rouleau/pel/master/doc/pdf/pl-tup.pdf][𝕻𝔩 - Tup]].  Re-organized the [[https://raw.githubusercontent.com/pierre-rouleau/pel/master/doc/pdf/-index.pdf][➢Index]] PDF to add cells for these 2 build systems along with the others,
   eliminating a section which increases spaces for Emacs topics and programming language tables.
- Add the *pel-rst-compile* command, bound to the ~<f12> c~ key sequence in *rst-mode*.  That command uses the
  command line identified by the *pel-rst-compiler* user option to render the reStructuredText file into
  the output format selected by the command.  The default is the provided pel-rst2html command.
- Add support for the SPDX license inserting code.  Bound ~C-c i l~ as well as ~<f6> M-l~ and ~<f11> i M-l~ to *spdx-insert-spdx*.
  This is still preliminary: integration with tempo-based templates is not done yet.
- Add the [[https://raw.githubusercontent.com/pierre-rouleau/pel/master/doc/pdf/compilation-mode][⅀Compilation Mode]] PDF.  Type  ~<f12> <f1>~ inside a compilation-mode buffer to open it.
- Add the ~<f11> t m y~ key binding  for *prettify-symbols-mode*.  Its state is now shown by *pel-show-text-modes*.
- *pel-ediff-2files* (bound to ~<f11> d 2~) can now compare the content of special buffers just as it was (and still is) able to do with files.